--- a/frontend/src/shared/CustomButton/customButton.module.css
+++ b/frontend/src/shared/CustomButton/customButton.module.css
@@ -7,7 +7,7 @@
   font-size: 16px;
   font-weight: bold;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: background-color 0.3s, opacity 0.3s;
   outline: none;
   text-align: center;
   height: 50px;
@@ -20,6 +20,17 @@
 
 .customButton:hover {
   background-color: #5a62a2;
+}
+
+.customButton.disabled {
+  background-color: #cccccc;
+  color: #666666;
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+
+.customButton.disabled:hover {
+  background-color: #cccccc;
 }
 
 .customButtonWrapper {
