--- a/frontend/src/features/ProfileSlider/components/Slider/profileSlider.module.css
+++ b/frontend/src/features/ProfileSlider/components/Slider/profileSlider.module.css
@@ -1,12 +1,12 @@
 .slider {
-  text-align: center;
+  /* text-align: center; */
   max-width: 500px;
   margin: 0 auto;
   margin-top: 20px;
 }
 
 .profileСard {
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
   padding: 20px;
   margin-bottom: 10px;
 }
@@ -69,4 +69,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.name {
+  text-align: center;
 }
