--- a/frontend/src/pages/EnterInfoPage/components/Page/enterInfo.module.css
+++ b/frontend/src/pages/EnterInfoPage/components/Page/enterInfo.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  position: relative;
 }
 
 .backIcon {
@@ -12,5 +13,10 @@
 }
 
 .nextButton {
-  margin-top: 450px;
+  position: fixed;
+  bottom: 60px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1000;
+  width: 290px;
 }
