--- a/frontend/src/pages/LikesPage/components/ProfileView/profileView.module.css
+++ b/frontend/src/pages/LikesPage/components/ProfileView/profileView.module.css
@@ -348,22 +348,26 @@
 .dislikeButton {
   background-color: grey;
   position: absolute;
-  left: 210px;
-  top: 620px;
+  left: 20%;
+  bottom: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* opacity: 0.5; */
+  z-index: 10;
+  width: 60px;
+  height: 60px;
 }
 
 .likeButton {
   position: absolute;
-  left: 300px;
-  top: 620px;
+  right: 20%;
+  bottom: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* opacity: 0.5; */
+  z-index: 10;
+  width: 60px;
+  height: 60px;
 }
 
 /* Container for interest tags */
