--- a/frontend/src/features/ProfileSlider/components/Slider/profileSlider.module.css
+++ b/frontend/src/features/ProfileSlider/components/Slider/profileSlider.module.css
@@ -28,7 +28,7 @@
 /* This section is now replaced by the updated .controls class below */
 
 .controls button {
-  margin: 5px;
+  /* margin: 5px; */
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
@@ -47,8 +47,9 @@
   justify-content: space-around;
   width: 100%;
   max-width: 300px;
-  margin: 20px auto;
+  margin: -30px auto;
   position: relative;
+
 }
 
 .likeButton {
